--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -1650,7 +1650,7 @@ a {
 .cid-t7jd4IT4s8 {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7jd4IT4s8 img,
 .cid-t7jd4IT4s8 .item-img {
@@ -1666,7 +1666,7 @@ a {
 .cid-t7jd4IT4s8 .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
