--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ span.middot {
 }
 
 .bg-color,
-.bg-color #header-wrap { background-color: #1ABC9C !important; }
+.bg-color #header-wrap { background-color: #FAFAFA !important; }
 
 .color { color: #1ABC9C !important; }
 
