--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -3568,7 +3568,7 @@ a {
 .cid-t7iLLfUdG5 {
   padding-top: 6rem;
   padding-bottom: 4rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7iLLfUdG5 .mbr-fallback-image.disabled {
   display: none;
