--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -2361,8 +2361,6 @@ a {
   color: #232323;
 }
 .cid-t7jcTEeXzN {
-  padding-top: 2rem;
-  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 .cid-t7jcTEeXzN img,
@@ -2379,7 +2377,7 @@ a {
 .cid-t7jcTEeXzN .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
@@ -3016,7 +3014,7 @@ a {
 .cid-t7jcPZ4fjH {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7jcPZ4fjH img,
 .cid-t7jcPZ4fjH .item-img {
@@ -3032,7 +3030,7 @@ a {
 .cid-t7jcPZ4fjH .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
@@ -3647,7 +3645,7 @@ a {
 .cid-t7j2tXSz0v {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7j2tXSz0v img,
 .cid-t7j2tXSz0v .item-img {
@@ -3663,7 +3661,7 @@ a {
 .cid-t7j2tXSz0v .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
