технические решения, страницы завершены

--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -4197,7 +4197,7 @@ a {
 .cid-t7iMwdR138 {
   padding-top: 6rem;
   padding-bottom: 1rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7iMwdR138 .mbr-fallback-image.disabled {
   display: none;
