--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -5128,7 +5128,7 @@ a {
 .cid-t7jcxcVeum {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-t7jcxcVeum img,
 .cid-t7jcxcVeum .item-img {
@@ -5144,7 +5144,7 @@ a {
 .cid-t7jcxcVeum .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #ffffff;
   height: 100%;
   display: flex;
   overflow: hidden;
