--- a/assets/synergy/css/mbr-additional.css
+++ b/assets/synergy/css/mbr-additional.css
@@ -722,7 +722,7 @@ a {
 .cid-t7iZquo2IE .slide-content {
   position: relative;
   border-radius: 4px;
-  background: #ffffff;
+  background: #fafafa;
   height: 100%;
   display: flex;
   overflow: hidden;
